apps/web/src/components/common/EnhancedTable/styles.module.css
.tableCell {
  transition: padding 0s;
}

.collapsedCell {
  padding: 0px !important;
  transition: padding 300ms ease-in-out;
}

.collapsedRow {
  border-bottom: none !important;
}

.tableBody tr:last-child td {
  border-bottom: none;
  padding-bottom: var(--space-1);
}

.actions {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: var(--space-1);
}

.compactTable thead th {
  font-size: 14px;
  padding: var(--space-1) 0;
}

.compactTable thead th:first-child {
  padding-left: 16px !important;
}

.compactTable thead th:last-child {
  padding-right: 16px !important;
}

.compactTable tbody td {
  padding: 12px 0 !important;
}

.compactTable tbody td:first-child {
  padding-left: 16px !important;
}

.compactTable tbody td:last-child {
  padding-right: 16px !important;
}

.compactTable tbody tr:hover {
  background: none !important;
}

.fixedLayout {
  table-layout: fixed;
}

.mobileLabel {
  display: none;
}

@media (max-width: 899.95px) {
  .mobileColumn thead th {
    display: none;
  }

  .mobileColumn tbody td {
    display: block;
    padding: 0 !important;
    margin: 12px var(--space-3) !important;
    background: inherit;
  }

  .mobileLabel {
    display: block;
    margin-bottom: var(--space-1);
  }

  .actions {
    justify-content: flex-start;
  }
}

